feat: :sparkles: adiciona forma de verificar se o Deimos está pronto
